--- a/images_links.html
+++ b/images_links.html
@@ -16,8 +16,8 @@
             <img src="images/datascience.webp" alt="data science info" width="800" height="400">
         </section>
         <section>
-            <h1>Don't we all love us some Mother Nature!!</h1>
-            
+            <h1>Don't we all love us some Mother Nature!</h1>
+
         </section>
     </body>
 </html>
