--- a/images_links.html
+++ b/images_links.html
@@ -4,6 +4,7 @@
         <title>Images_links_Assignment</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale = 1.0">
+        <link rel="stylesheet" type="text/css" href="images_links.css">
     </head>
     <body>
         <nav>
